small query update

--- a/src/components/dumbs/etg-selector/template.html
+++ b/src/components/dumbs/etg-selector/template.html
@@ -8,7 +8,7 @@
       items="[[data]]"
       as="item"
     >
-      <option value="[[item.title]]">[[item.title]]</option>
+      <option value="[[item.id]]">[[item.title]]</option>
     </template>
   </select>
 </div>
